--- a/2019/2019-05/2019-05-12/source/version1/300x600.css
+++ b/2019/2019-05/2019-05-12/source/version1/300x600.css
@@ -801,9 +801,9 @@
   left: 0px;
   top: 129px;
   background: url("./images/300x600_image1.jpg");
-  -webkit-animation: slideInRight 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: slideInRight 0.75s ease-in-out 0.75s forwards;
-  animation: slideInRight 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .image2 {
   width: 300px;
@@ -811,9 +811,9 @@
   left: 0px;
   top: 364px;
   background: url("./images/300x600_image2.jpg");
-  -webkit-animation: slideInLeft 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: slideInLeft 0.75s ease-in-out 0.75s forwards;
-  animation: slideInLeft 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .text {
   background: url("./images/300x600_text.png");
@@ -827,7 +827,7 @@
   left: 0px;
   bottom: 0px;
   background: url("./images/300x600_cta.png");
-  -webkit-animation: slideInUp 0.5s ease-in-out 2.75s forwards;
-  -moz-animation: slideInUp 0.5s ease-in-out 2.75s forwards;
-  animation: slideInUp 0.5s ease-in-out 2.75s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 2.75s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 2.75s forwards;
+  animation: fadeIn 0.5s ease-in-out 2.75s forwards;
 }
