--- a/2019/2019-05/2019-05-12/source/version1/970x250.css
+++ b/2019/2019-05/2019-05-12/source/version1/970x250.css
@@ -817,7 +817,7 @@
   right: 0px;
   bottom: 0px;
   background: url("./images/970x250_cta.png");
-  -webkit-animation: slideInLeft 0.5s ease-in-out 4.5s forwards;
-  -moz-animation: slideInLeft 0.5s ease-in-out 4.5s forwards;
-  animation: slideInLeft 0.5s ease-in-out 4.5s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 4.5s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 4.5s forwards;
+  animation: fadeIn 0.5s ease-in-out 4.5s forwards;
 }
