--- a/2019/2019-05/2019-05-12/source/version2/300x600.css
+++ b/2019/2019-05/2019-05-12/source/version2/300x600.css
@@ -818,7 +818,7 @@
   left: 0px;
   bottom: 0px;
   background: url("./images/300x600_cta.png");
-  -webkit-animation: slideInUp 0.5s ease-in-out 4.75s forwards;
-  -moz-animation: slideInUp 0.5s ease-in-out 4.75s forwards;
-  animation: slideInUp 0.5s ease-in-out 4.75s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 4.75s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 4.75s forwards;
+  animation: fadeIn 0.5s ease-in-out 4.75s forwards;
 }
