--- a/2019/2019-05/2019-05-12/source/version2/970x250.css
+++ b/2019/2019-05/2019-05-12/source/version2/970x250.css
@@ -818,7 +818,7 @@
   right: 0px;
   bottom: 0px;
   background: url("./images/970x250_cta.png");
-  -webkit-animation: slideInLeft 0.5s ease-in-out 4.75s forwards;
-  -moz-animation: slideInLeft 0.5s ease-in-out 4.75s forwards;
-  animation: slideInLeft 0.5s ease-in-out 4.75s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 4.75s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 4.75s forwards;
+  animation: fadeIn 0.5s ease-in-out 4.75s forwards;
 }
