--- a/2019/2019-06/2019-06-23/source/v1/300x250_d.css
+++ b/2019/2019-06/2019-06-23/source/v1/300x250_d.css
@@ -902,9 +902,9 @@
   left: 55px;
   background: url("./images/300x250_d_cta.png");
   background-size: 100% auto;
-  -webkit-animation: pulse 0.5s ease-in-out 3.5s forwards;
-  -moz-animation: pulse 0.5s ease-in-out 3.5s forwards;
-  animation: pulse 0.5s ease-in-out 3.5s forwards;
+  -webkit-animation: pulse 0.5s ease-in-out 3.5s infinite;
+  -moz-animation: pulse 0.5s ease-in-out 3.5s infinite;
+  animation: pulse 0.5s ease-in-out 3.5s infinite;
 }
 
 
