--- a/2019/2019-06/2019-06-23/source/v1/320x50.css
+++ b/2019/2019-06/2019-06-23/source/v1/320x50.css
@@ -902,9 +902,9 @@
   left: 153px;
   background: url("./images/320x50_cta.png");
   background-size: 100% auto;
-  -webkit-animation: pulse 0.5s ease-in-out 3.75s forwards;
-  -moz-animation: pulse 0.5s ease-in-out 3.75s forwards;
-  animation: pulse 0.5s ease-in-out 3.75s forwards;
+  -webkit-animation: pulse 0.5s ease-in-out 3.75s infinite;
+  -moz-animation: pulse 0.5s ease-in-out 3.75s infinite;
+  animation: pulse 0.5s ease-in-out 3.75s infinite;
 }
 
 
