--- a/2019/2019-06/2019-06-23/source/v2/300x250_m.css
+++ b/2019/2019-06/2019-06-23/source/v2/300x250_m.css
@@ -893,9 +893,9 @@
   left: 179px;
   background: url("./images/300x250_m_cta.png");
   background-size: 100% auto;
-  -webkit-animation: pulse 0.5s ease-in-out 2.25s forwards;
-  -moz-animation: pulse 0.5s ease-in-out 2.25s forwards;
-  animation: pulse 0.5s ease-in-out 2.25s forwards;
+  -webkit-animation: pulse 0.5s ease-in-out 2.25s infinite;
+  -moz-animation: pulse 0.5s ease-in-out 2.25s infinite;
+  animation: pulse 0.5s ease-in-out 2.25s infinite;
 }
 
 
