--- a/2019/2019-08/2019-08-20/source/970x250.css
+++ b/2019/2019-08/2019-08-20/source/970x250.css
@@ -854,9 +854,9 @@
 .text {
   background: url("./images/970x250_text.png");
   background-size: 100% auto;
-  -webkit-animation: fadeInUp 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 1s forwards;
-  animation: fadeInUp 0.75s ease-in-out 1s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .image1 {
   background: url("./images/970x250_image1.jpg");
