--- a/2019/2019-10/2019-10-10/source/300x250.css
+++ b/2019/2019-10/2019-10-10/source/300x250.css
@@ -828,52 +828,45 @@
 
 .cover{
   background: url('./images/300x250_cover.png') no-repeat center center;
-
+}
+.content-wrapper.animation .cover {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .image1 {
   background: url('./images/300x250_image1.png');
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.75s forwards;
 }
 .text1 {
   background: url('./images/300x250_text1.png');
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 1s forwards;
-  animation: fadeInDown 0.75s ease-in-out 1s forwards;
 }
 
 .image2 {
   background: url('./images/300x250_image2.png');
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 3.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 3.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 3.5s forwards;
 }
 .text2 {
   background: url('./images/300x250_text2.png');
-
-  -webkit-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 3.75s forwards;
 }
-
 .image3 {
   background: url('./images/300x250_image3.png');
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 6.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 6.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 6.25s forwards;
 }
 .text3 {
   background: url('./images/300x250_text3.png');
+}
 
-  -webkit-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
-  animation: fadeInDown 0.75s ease-in-out 6.5s forwards;
+.frame.animation .image {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.25s forwards;
+}
+.frame.animation .text {
+  -webkit-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
+  animation: fadeInDown 0.75s ease-in-out 0.5s forwards;
+}
+
+.frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
+  animation: fadeOut 0.75s ease-in-out 3.25s forwards;
 }
