Update animation for loop

--- a/2019/2019-10/2019-10-17/source/300x250_d.css
+++ b/2019/2019-10/2019-10-17/source/300x250_d.css
@@ -829,6 +829,8 @@
 .bg{
   background: url('./images/300x250_d_bg.jpg') no-repeat center center;
   background-size: 100% auto;
+}
+.animation .bg {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.75s forwards;
   animation: fadeIn 0.75s ease-in-out 0.75s forwards;
@@ -836,13 +838,12 @@
 .logo {
   background: url('./images/300x250_d_logo.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .cta {
   background: url('./images/300x250_d_cta.png') no-repeat center center;
   background-size: 100% auto;
+}
+.animation .logo, .animation .cta {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -851,26 +852,37 @@
 .headline {
   background: url('./images/300x250_d_headline.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 1.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 1.5s forwards;
 }
+.frame.animation .headline {
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+} 
 .text1 {
   background: url('./images/300x250_d_text1.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInUp 0.75s ease-in-out 2s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 2s forwards;
-  animation: fadeInUp 0.75s ease-in-out 2s forwards;
 }
-.frame1 {
-  -webkit-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 4.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 4.5s forwards;
+.frame.animation .text1 {
+  -webkit-animation: fadeInUp 0.75s ease-in-out 1s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 1s forwards;
+  animation: fadeInUp 0.75s ease-in-out 1s forwards;
+}
+.frame1.frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3.75s forwards;
+  animation: fadeOut 0.75s ease-in-out 3.75s forwards;
 }
 .text2 {
   background: url('./images/300x250_d_text2.png') no-repeat center center;
   background-size: 100% auto;
-  -webkit-animation: fadeInUp 0.75s ease-in-out 5s forwards;
-  -moz-animation: fadeInUp 0.75s ease-in-out 5s forwards;
-  animation: fadeInUp 0.75s ease-in-out 5s forwards;
+}
+.frame.animation .text2 {
+  -webkit-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
+  animation: fadeInUp 0.75s ease-in-out 0.5s forwards;
+}
+.frame2.frame.animation {
+  -webkit-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
+  -moz-animation: fadeOut 0.75s ease-in-out 3.25s forwards;
+  animation: fadeOut 0.75s ease-in-out 3.25s forwards;
 }
