--- a/2019/2019-12/2019-12-11/source/v1/320x50.css
+++ b/2019/2019-12/2019-12-11/source/v1/320x50.css
@@ -986,22 +986,10 @@
   -moz-animation: fadeOut 0.75s ease-in-out 3.5s forwards;
   animation: fadeOut 0.75s ease-in-out 3.5s forwards;
 }
-.cta1 {
-  background: url('./images/320x50_cta1.png') no-repeat center center;
+.cta {
+  background: url('./images/320x50_cta.png') no-repeat center center;
   background-size: 100% auto;
   -webkit-animation: fadeInRight 0.75s ease-in-out 4.25s forwards;
   -moz-animation: fadeInRight 0.75s ease-in-out 4.25s forwards;
   animation: fadeInRight 0.75s ease-in-out 4.25s forwards;
-}
-.cta1-container {
-  -webkit-animation: fadeOut 0.75s ease-in-out 6.5s forwards;
-  -moz-animation: fadeOut 0.75s ease-in-out 6.5s forwards;
-  animation: fadeOut 0.75s ease-in-out 6.5s forwards;
-}
-.cta2 {
-  background: url('./images/320x50_cta2.png') no-repeat center center;
-  background-size: 100% auto;
-  -webkit-animation: fadeInRight 0.75s ease-in-out 7s forwards;
-  -moz-animation: fadeInRight 0.75s ease-in-out 7s forwards;
-  animation: fadeInRight 0.75s ease-in-out 7s forwards;
 }
