--- a/2020/2020-01/2020-01-25/source/retargeting/attractions/300x600.css
+++ b/2020/2020-01/2020-01-25/source/retargeting/attractions/300x600.css
@@ -900,9 +900,9 @@
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 .content-wrapper.animation .text {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
 
 .frame1-image {
