--- a/2020/2020-01/2020-01-25/source/retargeting/sports/300x50.css
+++ b/2020/2020-01/2020-01-25/source/retargeting/sports/300x50.css
@@ -925,7 +925,7 @@
   animation: slideInDown 0.75s ease-in-out 1.5s forwards;
 }
 .text {
-  -webkit-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  -moz-animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
-  animation: fadeInDown 0.75s ease-in-out 0.75s forwards;
+  -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.75s ease-in-out 0.5s forwards;
 }
