--- a/2020/2020-01/2020-01-29/source/a/160x600.css
+++ b/2020/2020-01/2020-01-29/source/a/160x600.css
@@ -970,7 +970,7 @@ a {
   background: url('./images/160x600_cta.png') no-repeat center center;
   background-size: 100% auto;
 }
-.frame1-logo, .frame1-cta {
+.logo, .cta {
   -webkit-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 0.5s forwards;
   animation: fadeIn 0.75s ease-in-out 0.5s forwards;
@@ -992,11 +992,6 @@ a {
 }
 
 /* frame1 out */
-.frame1-logo-container, .frame1-cta-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 3.75s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 3.75s forwards;
-  animation: fadeOut 0.5s ease-in-out 3.75s forwards;
-}
 .frame1-image-container {
   -webkit-animation: slideUpApart 1s ease-in-out 3.75s forwards;
   -moz-animation: slideUpApart 1s ease-in-out 3.75s forwards;
@@ -1023,11 +1018,6 @@ a {
   -moz-animation: slideInUp 1s ease-in-out 3.75s forwards;
   animation: slideInUp 1s ease-in-out 3.75s forwards;
 }
-.frame2-logo, .frame2-cta {
-  -webkit-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 4.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 4.5s forwards;
-}
 .frame2-text {
   background: url('./images/160x600_frame2_text.png') no-repeat center center;
   background-size: 100% auto;
@@ -1037,11 +1027,6 @@ a {
 }
 
 /* frame2 out */
-.frame2-logo-container, .frame2-cta-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 7.75s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 7.75s forwards;
-  animation: fadeOut 0.5s ease-in-out 7.75s forwards;
-}
 .frame2-text-container {
   -webkit-animation: fadeOut 0.75s ease-in-out 7.75s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 7.75s forwards;
@@ -1060,11 +1045,6 @@ a {
   -moz-animation: slideInLeft 0.75s ease-in-out 7.75s forwards;
   animation: slideInLeft 0.75s ease-in-out 7.75s forwards;
 }
-.frame3-logo, .frame3-cta {
-  -webkit-animation: fadeIn 0.75s ease-in-out 8.25s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8.25s forwards;
-  animation: fadeIn 0.75s ease-in-out 8.25s forwards;
-}
 .frame3-text {
   background: url('./images/160x600_frame3_text.png') no-repeat center center;
   background-size: 100% auto;
@@ -1074,11 +1054,6 @@ a {
 }
 
 /* frame3 out */
-.frame3-logo-container, .frame3-cta-container {
-  -webkit-animation: fadeOut 0.5s ease-in-out 11.5s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 11.5s forwards;
-  animation: fadeOut 0.5s ease-in-out 11.5s forwards;
-}
 .frame3 {
   -webkit-animation: fadeOut 0.75s ease-in-out 11.5s forwards;
   -moz-animation: fadeOut 0.75s ease-in-out 11.5s forwards;
@@ -1091,11 +1066,6 @@ a {
   -webkit-animation: fadeIn 0.75s ease-in-out 12s forwards;
   -moz-animation: fadeIn 0.75s ease-in-out 12s forwards;
   animation: fadeIn 0.75s ease-in-out 12s forwards;
-}
-.frame4-logo, .frame4-cta {
-  -webkit-animation: fadeIn 0.75s ease-in-out 12.5s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 12.5s forwards;
-  animation: fadeIn 0.75s ease-in-out 12.5s forwards;
 }
 .frame4-text {
   background: url('./images/160x600_frame4_text.png') no-repeat center center;
